--- a/public/register.html
+++ b/public/register.html
@@ -14,6 +14,11 @@
 
     <br><br>
 
+    <label for="email">Email:</label><br>
+    <input type="text" name="email">
+
+    <br><br>
+
     <label for="password">Password:</label><br>
     <input type="text" name="password">
 
